# xdcc-extractor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  compose.ghcr.example.yaml  compose.override.yml  compose.yaml  config.docker.example.toml  config.docker.toml  config.env  config.example.toml  config.toml  docker-compose.yml  healthcheck.sh  passwords.example.txt  watcher.sh
.github/workflows/: ci.yml  release.yml
docs/: DESIGN_v1.1.0.md  DOCKER.md  IMPLEMENTATION_v1.1.0.md  MIGRATION_GOTIFY_TO_NTFY.md  MIGRATION_v1.1.0.md  RELEASE_CHECKLIST.md  ROADMAP.md
lib/: bootstrap.sh  colors.sh  config.sh  extractor.sh  logger.sh  monitor.sh  queue.sh  release.sh  state.sh  utils.sh  verify.sh
lib/extractors/: rar.sh
scripts/: publication-check.sh  status.sh  webui-smoke-test.sh
src/: config.rs  dry_run_check.rs  dry_run_report.rs  extractor.rs  history.rs  log_buffer.rs  main.rs  maintenance.rs  manual_process.rs  notifications.rs  passwords.rs  queue.rs  release.rs  scan.rs  status.rs  types.rs  web.rs  web_api.rs  web_assets.rs  web_backups.rs  web_disk.rs  web_history.rs  web_maintenance.rs  web_pages.rs  web_settings.rs  web_styles.rs
state/history/: Cleanup.Test.1-f2297d214d07.done  Delete.Test.1-c77c2503735a.done  Failed.Test.1-5fdf93912078.failed  Filter.Test.1-7c91e839f787.done  History.Test.1-4fa3cb328c99.done  Multipart.Test.1-a4d004a23ef0.done  Retry.Test.1-c1be5a6f7236.failed  RetryBrake.Test.1-0fcaa2b30f85.failed  Startup.Test.1-318904fa32ff.done  Startup.Test.1-950506929f69.done
