[package]
name = "xdcc-extractor"
version = "0.7.0"
edition = "2024"

[dependencies]
anyhow = "1"
notify = "8"
walkdir = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
tempfile = "3"
axum = "0.8"
base64 = "0.22"
